--- a/landing-page.css
+++ b/landing-page.css
@@ -2,6 +2,10 @@ body {
     margin: 0;
 }
 
+.container {
+    font-family: 'Roboto', sans-serif;
+}
+
 .links {
     list-style: none;
     display: flex;
@@ -20,7 +24,6 @@ body {
 
 #logo {
     font-size: 24px;
-    font-family: Roboto;
 }
 
 .header-extra {
@@ -36,15 +39,56 @@ button {
     border-radius: 12px;
     background-color: #3882f6;
     color: #f9faf8;
-    max-width: 80px;
+    max-width: 100px;
+    padding: 5px;
 }
 
 .text-group {
     display: flex;
     flex-direction: column;
-    max-width: 250px;
+    max-width: 300px;
+}
+
+.text-group h2{
+    margin-bottom: 8px;
+    font-weight: 900;
 }
 
 h2 {
     font-size: 42px;
+    font-weight: 900;
 }
+
+.image-placeholder{
+    display: flex;
+    align-items: center;
+    background-color: gray;
+    margin: 30px;
+    padding: 110px;
+}
+
+.info-section h3 {
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
+    display: flex;
+    justify-content: center;
+}
+
+.info-container {
+    display: flex;
+    justify-content: center;
+    gap: 70px;
+}
+
+.info-item {
+    max-width: 180px;
+}
+
+.image-box {
+    width: 200px;
+    height: 200px;
+    background-color: transparent;
+    border-radius: 12px;
+    border: 3px solid #3882f6;
+  }
